--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,6 @@
   filter: grayscale(100%);
   /* transition: filter 0.5s ease; */
 }
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
