--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
   filter: grayscale(100%);
   /* transition: filter 0.5s ease; */
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
