--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@
   justify-content: center;
   border: 3px solid #9C9B9B;
   border-radius: 10px;
+  height: 40px;
+  width: 40px;
+
   /* margin-right: 20px; */
 }
 @keyframes yellow-fade {
